--- a/stylesheetregular.css
+++ b/stylesheetregular.css
@@ -1,9 +1,9 @@
 @font-face {
 	font-family: 'droidkufi';
     font-weight: 100;
-	src: url('droidkufi-regular.eot');
-	src: url('droidkufi-regular.eot?#iefix') format('embedded-opentype'),
-		url('droidkufi-regular.woff') format('woff'),
-		url('droidkufi-regular.ttf') format('truetype'),
-		url('droidkufi-regular.svg') format('svg');
+	src: url('https://ahmedto.github.io/a7la-eid/droidkufi-regular.eot');
+	src: url('https://ahmedto.github.io/a7la-eid/droidkufi-regular.eot?#iefix') format('embedded-opentype'),
+		url('https://ahmedto.github.io/a7la-eid/droidkufi-regular.woff') format('woff'),
+		url('https://ahmedto.github.io/a7la-eid/droidkufi-regular.ttf') format('truetype'),
+		url('https://ahmedto.github.io/a7la-eid/droidkufi-regular.svg') format('svg');
 }
