--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ padding-left: 20px;
             background-repeat: no-repeat;
             background-position: 98% center;
             padding-right: 20px;
-            color: #47b7dc;
+            color: #000;
             text-decoration: none;
             display: block;
             line-height: 30px;
